Dark Mode & Bugfix

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -280,8 +280,8 @@
 
 .theme-toggle {
     position: absolute;
-    top: 0;
-    right: var(--space-6);
+    top: var(--space-8);
+    right: var(--space-4);
     transform: translateY(-50%);
     display: flex;
     align-items: center;
@@ -289,7 +289,7 @@
     width: 2.5rem;
     height: 2.5rem;
     border-radius: var(--radius-full);
-    border: 1px solid var(--neutral-200);
+    border: 1px solid var(--neutral-100);
     background: var(--surface);
     color: var(--neutral-500);
     box-shadow: var(--shadow-sm);
